<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ui.home.HomeFragment">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_marginHorizontal="24dp"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="32dp"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    app:layout_constraintTop_toTopOf="parent"
    android:background="@drawable/countdown_background"
    android:id="@+id/timer_layout"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">


        <TextView
            android:layout_margin="4dp"
            android:background="@drawable/timer_background"
            android:paddingHorizontal="12dp"
            android:paddingVertical="8dp"
            android:id="@+id/countdown_ten_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/countdown_days"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
        <TextView
            android:layout_margin="4dp"
            android:background="@drawable/timer_background"
            android:paddingHorizontal="12dp"
            android:paddingVertical="8dp"
            android:id="@+id/countdown_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/timer_dots_1"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
        <TextView
            android:layout_margin="4dp"
            android:text="@string/double_dots"
            android:id="@+id/timer_dots_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/countdown_ten_hours"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/helper"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="2dp"
            android:paddingHorizontal="12dp"
            android:paddingVertical="8dp"
            android:background="@drawable/timer_background"
            android:id="@+id/countdown_ten_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

    <TextView
        android:id="@+id/helper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    </TextView>

    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/helper"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="2dp"
        android:paddingHorizontal="12dp"
        android:paddingVertical="8dp"
        android:background="@drawable/timer_background"
        android:id="@+id/countdown_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        />


        <TextView
            android:layout_margin="4dp"
            android:text="@string/double_dots"
            android:id="@+id/timer_dots_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/countdown_hours"
            />

        <TextView
            android:layout_margin="4dp"
            android:paddingHorizontal="12dp"
            android:paddingVertical="8dp"
            android:background="@drawable/timer_background"
            android:id="@+id/countdown_ten_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/timer_dots_2"/>

        <TextView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/countdown_ten_minutes"
            android:layout_margin="4dp"
            android:paddingHorizontal="12dp"
            android:paddingVertical="8dp"
            android:background="@drawable/timer_background"
            android:id="@+id/countdown_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />





        <TextView
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:id="@+id/hours_tv"
            android:text="@string/hours"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/countdown_hours"
            app:layout_constraintStart_toStartOf="@id/countdown_ten_hours"
            app:layout_constraintEnd_toEndOf="@id/countdown_hours"
            />
        <TextView
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:text="@string/days"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/countdown_days"
            app:layout_constraintStart_toStartOf="@id/countdown_ten_days"
            app:layout_constraintEnd_toEndOf="@id/countdown_days"
            />
        <TextView
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:text="@string/minutes"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/countdown_minutes"
            app:layout_constraintStart_toStartOf="@id/countdown_ten_minutes"
            app:layout_constraintEnd_toEndOf="@id/countdown_minutes"
            />
    <TextView
        android:layout_marginBottom="12dp"
        android:text="@string/are_u_rdy"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/countdown_hours"
        app:layout_constraintStart_toStartOf="@id/countdown_ten_hours"
        app:layout_constraintEnd_toEndOf="@id/countdown_hours"
        />




</androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/classes_rv"
        android:clipToPadding="false"
        android:paddingVertical="8dp"
        app:layout_constraintTop_toBottomOf="@id/timer_layout"
        app:layout_constraintStart_toStartOf="parent"
      >
    </androidx.recyclerview.widget.RecyclerView>



</androidx.constraintlayout.widget.ConstraintLayout>